plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Web для REST API
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring Boot Actuator для метрик и мониторинга
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	implementation 'io.micrometer:micrometer-registry-prometheus'


	// Lombok для упрощения кода
	implementation 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// PostgreSQL Driver (если база данных используется)
	implementation 'org.postgresql:postgresql'

	// Spring Data JPA (если работаешь с базой данных)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// Тестирование
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

bootRun {
	jvmArgs = ['-Xlog:gc*:file=gc.log']
	doFirst {
		println "JVM arguments: $jvmArgs"
	}
}


